# matgame

./: .envrc  Dockerfile  Makefile  README.md  entry.sh  manage.py  pyproject.toml
common/: apps.py  views.py
games/: apps.py  models.py  serializers.py
games/migrations/: 0001_initial.py
leagues/: apps.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
leagues/migrations/: 0001_initial.py  0002_alter_round_unique_together_round_match_number_and_more.py  0003_alter_round_league.py  0004_alter_round_unique_together.py
local/: docker-compose.yaml
matgame/: asgi.py  settings.py  urls.py  util.py  wsgi.py
matgame/urls/: __init__.py  v1.py
teams/: apps.py  models.py  serializers.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_alter_team_name.py  0003_alter_team_coach.py  0004_remove_team_total_participation_and_more.py
users/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
users/management/commands/: init_game.py  init_user.py
users/migrations/: 0001_initial.py  0002_playerdetails_team.py  0003_remove_playerdetails_total_participation_and_more.py
users/urls/: coaches.py  players.py  users.py
